# tzompantli

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  sysroot
.github/workflows/: ci.yml
docs/: config.md
rules/: 66-tzompantli.rules.polkit
shaders/: vertex.glsl
src/: apps.rs  config.rs  geometry.rs  icon.rs  main.rs  renderer.rs  svg.rs  text.rs  xdg.rs
src/dbus/: logind.rs  mod.rs
src/protocols/: mod.rs
src/ui/: mod.rs  renderer.rs  skia.rs  text.rs  window.rs
src/wayland/: fractional_scale.rs  mod.rs  viewporter.rs
