[package]
name = "tzompantli"
version = "0.1.0"
description = "A Wayland mobile application drawer"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/tzompantli"
rust-version = "1.80.0"
license = "GPL-3.0"
edition = "2021"

[dependencies]
crossfont = { version = "0.8.0" }
glutin = { version = "0.31.3", default-features = false, features = ["egl", "wayland"] }
image = { version = "0.25.1", default-features = false, features = ["png"] }
raw-window-handle = "0.5.0"
resvg = { version = "0.41.0", default-features = false }
smithay-client-toolkit = { version = "0.18.1", default-features = false, features = ["xkbcommon"] }
tokio = "1.26.0"
wayland-backend = { version = "0.3.3", features = ["client_system"] }
xdg = "2.5.2"
zbus = { version = "5.1.1", default-features = false, features = ["tokio"] }

[build-dependencies]
gl_generator = "0.14.0"
