[package]
name = "tzompantli"
version = "1.3.1"
description = "A Wayland mobile application drawer"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/tzompantli"
rust-version = "1.85.0"
license = "GPL-3.0"
edition = "2024"

[dependencies]
calloop = "0.14.2"
calloop-wayland-source = "0.4.0"
configory = { version = "0.6.2", features = ["docgen", "log"] }
crossfont = { version = "0.9.0" }
glutin = { version = "0.32.1", default-features = false, features = ["egl", "wayland"] }
raw-window-handle = "0.6.2"
rayon = "1.11.0"
resvg = "0.45.1"
serde = "1.0.188"
skia-safe = { version = "0.91.0", features = ["all-linux", "textlayout"] }
smithay-client-toolkit = { version = "0.20.0", default-features = false, features = ["xkbcommon"] }
thiserror = "2.0.11"
tokio = "1.26.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
wayland-backend = { version = "0.3.3", features = ["client_system"] }
xdg = "3.0.0"
zbus = { version = "5.1.1", default-features = false, features = ["tokio"] }

[build-dependencies]
gl_generator = "0.14.0"
